letest doc 2 updated code

--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,13 @@ button {
   80%   {background-size: 1ch 100%,1ch 100%,1ch 100%,1ch 100%,1ch 100%,1ch 100%,1ch 100%}
   90%   {background-size: 1ch 100%,1ch 100%,1ch 100%,1ch 100%,1ch 100%,1ch 100%,1ch 100%}
 }
+
+
+
+
+
+
+
+
+
+/* KPI cards animations  */
