--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,24 @@
+.fontfor-company{
+  /* font-family: Georgia, 'Times New Roman', Times, serif; */
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
 button {
   cursor: pointer;
 }
+
+.tree-link {
+  color: #334155;
+  text-decoration: none;
+  flex-grow: 1;
+  transition: color .2s;
+  font-weight: 400 !important;
+}
+
+.tree-item.level-1 .tree-item-header {
+  padding-left: 25px;
+}
+
 
 /* Loading css start here */
 
@@ -72,4 +90,27 @@ button {
 
 .animate-slide-in-right {
   animation: slideInRight 0.3s ease-out;
+}
+
+
+
+
+/* Sidebar button Animations start here  */
+.wave-animation {
+  background: radial-gradient(circle, rgba(133, 200, 231, 0.4) 0%, rgba(4, 49, 107, 0) 70%);
+  animation: wave 1.5s infinite;
+}
+
+@keyframes wave {
+  0% {
+    transform: scale(0);
+    opacity: 0.9;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.5);
+    opacity: 0.6;
+  }
 }
